# PMC_GameOfLive

./: .gitignore  CMakeLists.txt  README.md  build.ninja  main.cpp
src/: main.cpp
